--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -21,11 +21,14 @@
     "@sveltejs/adapter-node": "^5.2.9",
     "@sveltejs/kit": "^2.7.4",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/leaflet": "^1.9.21",
     "chart.js": "^4.4.1",
     "express": "^4.18.2",
     "firebase": "^11.1.0",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.20.0",
-    "svelte": "^5.0.0"
+    "svelte": "^5.0.0",
+    "vis-network": "^10.0.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.10",
