--- a/backend-services/package.json
+++ b/backend-services/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "firebase-admin": "^13.5.0",
     "mongoose": "^7.5.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
