--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,8 @@
     "node": "20"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "axios-retry": "^4.5.0",
     "cors": "^2.8.5",
     "firebase-admin": "^13.0.1",
     "firebase-functions": "^6.1.1",
