Fix graph system: backend response format, missing throughput data, frontend overlay display

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "lte-pci-mapper-65450042-bbf71"
-  }
+    "default": "wisptools-production"
+  },
+  "targets": {},
+  "etags": {}
 }
