--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -4,25 +4,7 @@ on:
   push:
     branches:
       - main
-    paths:
-      # Only trigger on frontend changes
-      - 'Module_Manager/src/**'
-      - 'Module_Manager/package.json'
-      - 'Module_Manager/package-lock.json'
-      - 'Module_Manager/vite.config.ts'
-      - 'Module_Manager/svelte.config.js'
-      - 'Module_Manager/tsconfig.json'
-      - 'firebase.json'
-      # Exclude backend paths to prevent unnecessary deployments
-      - '!backend-services/**'
-      - '!gce-backend/**'
-      - '!distributed-epc/**'
-      - '!hss-module/**'
-      - '!genieacs-cloudrun/**'
-      - '!genieacs-fork/**'
-      - '!scripts/**'
-      - '!*.sh'
-      - '!*.md'
+    # Always run on push to main - let job decide what to deploy based on changed files
   pull_request:
     branches:
       - main
@@ -66,18 +48,11 @@ jobs:
               - 'hss-module/**'
               - 'scripts/**'
       
-      - name: Skip if no frontend changes
-        if: steps.changes.outputs.frontend == 'false'
+      - name: Skip if no frontend changes (unless manual trigger)
+        if: steps.changes.outputs.frontend == 'false' && github.event_name != 'workflow_dispatch'
         run: |
           echo "⏭️ No frontend changes detected - skipping deployment"
           echo "Backend-only changes will not trigger frontend deployment"
-          exit 0
-      
-      - name: Skip if only backend changes
-        if: steps.changes.outputs.frontend == 'false' && steps.changes.outputs.backend == 'true'
-        run: |
-          echo "⏭️ Only backend changes detected - skipping frontend deployment"
-          echo "Frontend deployment will only occur when frontend files are modified"
           exit 0
 
       - name: Setup Node.js
