--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -22,6 +22,10 @@ jobs:
     name: Deploy to Firebase Hosting
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      pull-requests: read
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
