--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -55,13 +55,6 @@ jobs:
       if: steps.changes.outputs.functions == 'true'
       run: npm install -g firebase-tools@latest
       
-    - name: Authenticate to Firebase
-      if: steps.changes.outputs.functions == 'true'
-      run: |
-        echo '${{ secrets.FIREBASE_TOKEN }}' > /tmp/firebase-token
-        export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-        firebase login:ci --token $FIREBASE_TOKEN
-        
     - name: Build Functions
       if: steps.changes.outputs.functions == 'true'
       run: |
@@ -71,9 +64,10 @@ jobs:
         
     - name: Deploy Functions
       if: steps.changes.outputs.functions == 'true'
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: |
-        export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-        firebase deploy --only functions --project ${{ env.FIREBASE_PROJECT_ID }} --token $FIREBASE_TOKEN
+        firebase deploy --only functions --project ${{ env.FIREBASE_PROJECT_ID }} --token "$FIREBASE_TOKEN"
 
   deploy-frontend:
     name: Deploy Frontend
@@ -118,13 +112,6 @@ jobs:
       if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
       run: npm install -g firebase-tools@latest
       
-    - name: Authenticate to Firebase
-      if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
-      run: |
-        echo '${{ secrets.FIREBASE_TOKEN }}' > /tmp/firebase-token
-        export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-        firebase login:ci --token $FIREBASE_TOKEN
-        
     - name: Build Frontend
       if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
       run: |
@@ -134,9 +121,10 @@ jobs:
         
     - name: Deploy Frontend
       if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: |
-        export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-        firebase deploy --only hosting --project ${{ env.FIREBASE_PROJECT_ID }} --token $FIREBASE_TOKEN
+        firebase deploy --only hosting --project ${{ env.FIREBASE_PROJECT_ID }} --token "$FIREBASE_TOKEN"
 
   deploy-rules:
     name: Deploy Firestore Rules
@@ -171,15 +159,9 @@ jobs:
       if: steps.changes.outputs.rules == 'true'
       run: npm install -g firebase-tools@latest
       
-    - name: Authenticate to Firebase
-      if: steps.changes.outputs.rules == 'true'
-      run: |
-        echo '${{ secrets.FIREBASE_TOKEN }}' > /tmp/firebase-token
-        export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-        firebase login:ci --token $FIREBASE_TOKEN
-        
     - name: Deploy Firestore Rules
       if: steps.changes.outputs.rules == 'true'
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: |
-        export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-        firebase deploy --only firestore:rules,firestore:indexes --project ${{ env.FIREBASE_PROJECT_ID }} --token $FIREBASE_TOKEN
+        firebase deploy --only firestore:rules,firestore:indexes --project ${{ env.FIREBASE_PROJECT_ID }} --token "$FIREBASE_TOKEN"
