--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -83,13 +83,6 @@ jobs:
         if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         run: npm install -g firebase-tools@latest
         
-      - name: Authenticate to Firebase
-        if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
-        run: |
-          echo '${{ secrets.FIREBASE_TOKEN }}' > /tmp/firebase-token
-          export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-          firebase login:ci --token $FIREBASE_TOKEN
-
       - name: Verify build output
         if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
         working-directory: ./Module_Manager
@@ -106,9 +99,10 @@ jobs:
 
       - name: Deploy to Firebase Hosting
         if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          export FIREBASE_TOKEN="$(cat /tmp/firebase-token)"
-          firebase deploy --only hosting --project ${{ env.FIREBASE_PROJECT_ID }} --token $FIREBASE_TOKEN
+          firebase deploy --only hosting --project ${{ env.FIREBASE_PROJECT_ID }} --token "$FIREBASE_TOKEN"
 
       - name: Deployment summary
         if: steps.changes.outputs.frontend == 'true' || github.event_name == 'workflow_dispatch'
