fix(ci): add permissions for checkout
Grant contents/pull-requests read permissions to frontend and rules deploy jobs to prevent git exit code 128 during checkout.

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -73,6 +73,10 @@ jobs:
     name: Deploy Frontend
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: read
+      pull-requests: read
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
