--- a/.github/workflows/deploy-firestore-rules.yml
+++ b/.github/workflows/deploy-firestore-rules.yml
@@ -9,6 +9,10 @@ on:
       - 'firestore.indexes.json'
       - '.github/workflows/deploy-firestore-rules.yml'
 
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   deploy-rules:
     runs-on: ubuntu-latest
