--- a/firebase.json
+++ b/firebase.json
@@ -23,7 +23,16 @@
       "errorDocument": "404.html",
       "headers": [
         {
-          "source": "/api/**",
+          "source": "/_app/immutable/**",
+          "headers": [
+            {
+              "key": "Cache-Control",
+              "value": "public, max-age=31536000, immutable"
+            }
+          ]
+        },
+        {
+          "source": "/_app/version.json",
           "headers": [
             {
               "key": "Cache-Control",
@@ -32,7 +41,7 @@
           ]
         },
         {
-          "source": "**/_app/**",
+          "source": "/api/**",
           "headers": [
             {
               "key": "Cache-Control",
@@ -46,15 +55,6 @@
             {
               "key": "Cache-Control",
               "value": "public, max-age=31536000, immutable"
-            }
-          ]
-        },
-        {
-          "source": "**/*.js",
-          "headers": [
-            {
-              "key": "Cache-Control",
-              "value": "no-cache, no-store, must-revalidate"
             }
           ]
         },
