--- a/firebase.json
+++ b/firebase.json
@@ -92,6 +92,10 @@
           "function": "isoProxy"
         },
         {
+          "source": "/cwmp/**",
+          "function": "handleCWMPMultitenant"
+        },
+        {
           "source": "/api/**",
           "function": "apiProxy"
         },
