--- a/backend-services/package.json
+++ b/backend-services/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^13.6.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^7.8.8",
     "multer": "^2.0.2",
     "net-snmp": "^3.26.0",
