--- a/Module_Manager/package.json
+++ b/Module_Manager/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.34.8",
+    "@stripe/stripe-js": "^4.10.0",
     "@sveltejs/adapter-node": "^5.2.9",
     "@sveltejs/kit": "^2.49.1",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
